k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-event-server
  namespace: service
  labels:
    app: payment-api-event-server
spec:
  type: ClusterIP
  selector:
    app: payment-api-event-server
  ports:
    - name: http
      port: 8080
      targetPort: http
